--- a/README
+++ b/README
@@ -25,7 +25,7 @@
 
 Система врагов
 
-4 типа врагов: ближний бой, дальний бой, танк, босс
+4 типа врагов: ближний бой, дальний бой, босс
 Искусственный интеллект с разным поведением
 Система здоровья и урона
 Анимация движения и атаки
