--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Название проекта: Dungeon Shooter
+Название проекта: Protocol0
 Тип проекта: 2D компьютерная игра
 Жанр: Top-down шутер с элементами roguelike
 Целевая платформа: Windows, Linux, macOS
